--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,13 +46,13 @@ jobs:
         run: cargo fmt --all -- --check
       - name: Build
         run: cargo check --all
-      - name: Login to GitHub Container Registry
+      - name: Login  GitHub Container Registry 
         uses: docker/login-action@v1
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
+          
       - name: Docker metadata action
         id: meta
         uses: docker/metadata-action@v3.6.0
